...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Scrollable ListView -->

    <ListView
        android:id="@+id/recycler_notifications"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"
        android:paddingBottom="8dp"
...
